# pack-wix-msi-cross-install-detection

./: CMakeLists.txt  Product.wxs  README.md  build-app.ps1  patch_a - Copie.xml  patch_a.xml  patch_b - Copie.xml  patch_b.xml
AppMsiTest/: AppMsiTest.cpp  AppMsiTest.h  CMakeLists.txt
